--- a/html/balls/badminton.html
+++ b/html/balls/badminton.html
@@ -233,7 +233,7 @@
             <!--上列表-->
             <ul class="headerlist">
                 <li><a href="./basketball.html" class="active">市場列表</a></li>
-                <li><a href="#">直播</a></li>
+                <li><a href="./live.html">直播</a></li>
                 <li><a href="./result.html">比賽結果</a></li>
                 <li><a href="./teach.html">盤口教程</a></li>
                 <li><a href="../../index.html">比分</a></li>
@@ -524,6 +524,45 @@
                                 <a href="javascript:;" class="tbimg3 innerBtn">+99></a>
                             </td>
                         </tr>
+                        <tr class="liveBoard">
+                            <td class="box" colspan="100">
+                                <table class="scoreBoard badminton">
+                                    <tr>
+                                        <th>球權</th>
+                                        <th class="tLeft">選手</th>
+                                        <th>1</th>
+                                        <th>2</th>
+                                        <th>3</th>
+                                        <th>4</th>
+                                        <th>5</th>
+                                        <th>總分</th>
+                                        <th>局數</th>
+                                    </tr>
+                                    <tr>
+                                        <td><span class="mark"></span></td>
+                                        <td class="tLeft">蓬帕威.磋楚翁[泰國]</td>
+                                        <td>21</td>
+                                        <td>10</td>
+                                        <td>21</td>
+                                        <td>10</td>
+                                        <td>10</td>
+                                        <td>72</td>
+                                        <td>2</td>
+                                    </tr>
+                                    <tr>
+                                        <td>-</td>
+                                        <td class="tLeft">布桑藍.恩布魯龐[泰國]</td>
+                                        <td>10</td>
+                                        <td>21</td>
+                                        <td>10</td>
+                                        <td>21</td>
+                                        <td>8</td>
+                                        <td>70</td>
+                                        <td>2</td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
                         <!--第二行-->
                         <tr>
                             <td class="tLeft">
@@ -719,6 +758,45 @@
                             <td>
                                 <a href="javascript:;" class="tbimg2 love"></a>
                                 <a href="javascript:;" class="tbimg3 innerBtn">+99></a>
+                            </td>
+                        </tr>
+                        <tr class="liveBoard">
+                            <td class="box" colspan="100">
+                                <table class="scoreBoard badminton">
+                                    <tr>
+                                        <th>球權</th>
+                                        <th class="tLeft">選手</th>
+                                        <th>1</th>
+                                        <th>2</th>
+                                        <th>3</th>
+                                        <th>4</th>
+                                        <th>5</th>
+                                        <th>總分</th>
+                                        <th>局數</th>
+                                    </tr>
+                                    <tr>
+                                        <td><span class="mark"></span></td>
+                                        <td class="tLeft">蓬帕威.磋楚翁[泰國]</td>
+                                        <td>21</td>
+                                        <td>10</td>
+                                        <td>21</td>
+                                        <td>10</td>
+                                        <td>10</td>
+                                        <td>72</td>
+                                        <td>2</td>
+                                    </tr>
+                                    <tr>
+                                        <td>-</td>
+                                        <td class="tLeft">布桑藍.恩布魯龐[泰國]</td>
+                                        <td>10</td>
+                                        <td>21</td>
+                                        <td>10</td>
+                                        <td>21</td>
+                                        <td>8</td>
+                                        <td>70</td>
+                                        <td>2</td>
+                                    </tr>
+                                </table>
                             </td>
                         </tr>
                         <!--第二行-->
