--- a/html/balls/baseball.html
+++ b/html/balls/baseball.html
@@ -233,7 +233,7 @@
             <!--上列表-->
             <ul class="headerlist">
                 <li><a href="./baseball.html" class="active">市場列表</a></li>
-                <li><a href="#">直播</a></li>
+                <li><a href="./live.html">直播</a></li>
                 <li><a href="./result.html">比賽結果</a></li>
                 <li><a href="./teach.html">盤口教程</a></li>
                 <li><a href="../../index.html">比分</a></li>
@@ -509,6 +509,70 @@
                                 <a href="javascript:;" class="tbimg3 innerBtn">+99></a>
                             </td>
                         </tr>
+                        <tr class="liveBoard">
+                            <td class="box" colspan="100">
+                                <table class="scoreBoard baseball">
+                                    <tr>
+                                        <th class="tLeft">主客隊</th>
+                                        <th>1</th>
+                                        <th>2</th>
+                                        <th>3</th>
+                                        <th>4</th>
+                                        <th>5</th>
+                                        <th>6</th>
+                                        <th>7</th>
+                                        <th>8</th>
+                                        <th>9</th>
+                                        <th>OT</th>
+                                        <th>R</th>
+                                        <th>H</th>
+                                        <th>E</th>
+                                    </tr>
+                                    <tr>
+                                        <td class="tLeft">
+                                            <p>
+                                                <span class="mainTeam">主</span>
+                                                日本火腿
+                                            </p>
+                                        </td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>1</td>
+                                        <td>-</td>
+                                        <td>-</td>
+                                        <td>-</td>
+                                        <td>-</td>
+                                        <td>1</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tLeft">
+                                            <p>
+                                                <span class="customTeam">客</span>
+                                                西武獅
+                                            </p>
+                                        </td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>1</td>
+                                        <td>-</td>
+                                        <td>-</td>
+                                        <td>-</td>
+                                        <td>-</td>
+                                        <td>1</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
                         <!--第二行-->
                         <tr>
                             <td class="tLeft">
@@ -702,6 +766,70 @@
                             <td>
                                 <a href="javascript:;" class="tbimg2 love"></a>
                                 <a href="javascript:;" class="tbimg3 innerBtn">+99></a>
+                            </td>
+                        </tr>
+                        <tr class="liveBoard">
+                            <td class="box" colspan="100">
+                                <table class="scoreBoard baseball">
+                                    <tr>
+                                        <th class="tLeft">主客隊</th>
+                                        <th>1</th>
+                                        <th>2</th>
+                                        <th>3</th>
+                                        <th>4</th>
+                                        <th>5</th>
+                                        <th>6</th>
+                                        <th>7</th>
+                                        <th>8</th>
+                                        <th>9</th>
+                                        <th>OT</th>
+                                        <th>R</th>
+                                        <th>H</th>
+                                        <th>E</th>
+                                    </tr>
+                                    <tr>
+                                        <td class="tLeft">
+                                            <p>
+                                                <span class="mainTeam">主</span>
+                                                日本火腿
+                                            </p>
+                                        </td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>1</td>
+                                        <td>-</td>
+                                        <td>-</td>
+                                        <td>-</td>
+                                        <td>-</td>
+                                        <td>1</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tLeft">
+                                            <p>
+                                                <span class="customTeam">客</span>
+                                                西武獅
+                                            </p>
+                                        </td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                        <td>1</td>
+                                        <td>-</td>
+                                        <td>-</td>
+                                        <td>-</td>
+                                        <td>-</td>
+                                        <td>1</td>
+                                        <td>0</td>
+                                        <td>0</td>
+                                    </tr>
+                                </table>
                             </td>
                         </tr>
                         <!--第二行-->
