--- a/html/balls/lotto.html
+++ b/html/balls/lotto.html
@@ -233,7 +233,7 @@
             <!--上列表-->
             <ul class="headerlist">
                 <li><a href="./basketball.html" class="active">市場列表</a></li>
-                <li><a href="#">直播</a></li>
+                <li><a href="./live.html">直播</a></li>
                 <li><a href="./result.html">比賽結果</a></li>
                 <li><a href="./teach.html">盤口教程</a></li>
                 <li><a href="../../index.html">比分</a></li>
@@ -496,6 +496,65 @@
                                 <a href="javascript:;" class="tbimg3 innerBtn">+99></a>
                             </td>
                         </tr>
+                        <tr class="liveBoard">
+                            <td class="box" colspan="100">
+                                <table class="scoreBoard lottery bingo">
+                                    <tr>
+                                        <th>期數</th>
+                                        <th colspan="10">獎號</th>
+                                        <th>超級獎號</th>
+                                        <th>猜大小</th>
+                                        <th>猜單雙</th>
+                                    </tr>
+                                    <tr>
+                                        <td>第110034567期</td>
+                                        <td>
+                                            <p>01</p>
+                                            <p>03</p>
+                                        </td>
+                                        <td>
+                                            <p>04</p>
+                                            <p>08</p>
+                                        </td>
+                                        <td>
+                                            <p>10</p>
+                                            <p>19</p>
+                                        </td>
+                                        <td>
+                                            <p>21</p>
+                                            <p>34</p>
+                                        </td>
+                                        <td>
+                                            <p>37</p>
+                                            <p>38</p>
+                                        </td>
+                                        <td>
+                                            <p>39</p>
+                                            <p>42</p>
+                                        </td>
+                                        <td>
+                                            <p>46</p>
+                                            <p>48</p>
+                                        </td>
+                                        <td>
+                                            <p>52</p>
+                                            <p>53</p>
+                                        </td>
+                                        <td>
+                                            <p>65</p>
+                                            <p>67</p>
+                                        </td>
+                                        <td>
+                                            <p>68</p>
+                                            <p>73</p>
+                                        </td>
+                                        <td>65</td>
+                                        <td>小</td>
+                                        <td>和</td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
                          <!--第二行-->
                          <tr>
                             <td class="tLeft">
@@ -585,6 +644,45 @@
                             <td>
                                 <a href="javascript:;" class="tbimg2 love"></a>
                                 <a href="javascript:;" class="tbimg3 innerBtn">+99></a>
+                            </td>
+                        </tr>
+                        <tr class="liveBoard">
+                            <td class="box" colspan="100">
+                                <table class="scoreBoard lottery lotto">
+                                    <tr>
+                                        <th>期數</th>
+                                        <th colspan="6">獎號</th>
+                                        <th>特別號</th>
+                                    </tr>
+                                    <tr>
+                                        <td>第110034567期</td>
+                                        <td>
+                                            <p>開出順序</p>
+                                            <p>大小順序</p>
+                                        </td>
+                                        <td>
+                                            <p>06</p>
+                                            <p>06</p>
+                                        </td>
+                                        <td>
+                                            <p>13</p>
+                                            <p>10</p>
+                                        </td>
+                                        <td>
+                                            <p>10</p>
+                                            <p>13</p>
+                                        </td>
+                                        <td>
+                                            <p>45</p>
+                                            <p>19</p>
+                                        </td>
+                                        <td>
+                                            <p>19</p>
+                                            <p>40</p>
+                                        </td>
+                                        <td>07</td>
+                                    </tr>
+                                </table>
                             </td>
                         </tr>
                         <!--第二行-->
