--- a/html/balls/race.html
+++ b/html/balls/race.html
@@ -233,7 +233,7 @@
             <!--上列表-->
             <ul class="headerlist">
                 <li><a href="./basketball.html" class="active">市場列表</a></li>
-                <li><a href="#">直播</a></li>
+                <li><a href="./live.html">直播</a></li>
                 <li><a href="./result.html">比賽結果</a></li>
                 <li><a href="./teach.html">盤口教程</a></li>
                 <li><a href="../../index.html">比分</a></li>
@@ -496,6 +496,93 @@
                                 <a href="javascript:;" class="tbimg3 innerBtn">+99></a>
                             </td>
                         </tr>
+                        <tr class="liveBoard">
+                            <td class="box" colspan="100">
+                                <table class="scoreBoard race">
+                                    <tr>
+                                        <th>名次</th>
+                                        <th>馬號</th>
+                                        <th class="tLeft">馬名</th>
+                                        <th class="tLeft">騎師</th>
+                                        <th class="tLeft">練馬師</th>
+                                        <th>檔位</th>
+                                        <th>成績</th>
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>4</td>
+                                        <td class="tLeft">水箭龜(C450)</td>
+                                        <td class="tLeft">周俊樂</td>
+                                        <td class="tLeft">霍利時</td>
+                                        <td>6</td>
+                                        <td>2:01:07</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2</td>
+                                        <td>3</td>
+                                        <td class="tLeft">全才(B213)</td>
+                                        <td class="tLeft">潘頓</td>
+                                        <td class="tLeft">雷達</td>
+                                        <td>8</td>
+                                        <td>2:01:07</td>
+                                    </tr>
+                                    <tr>
+                                        <td>3</td>
+                                        <td>1</td>
+                                        <td class="tLeft">福多寶(B026)</td>
+                                        <td class="tLeft">巴度</td>
+                                        <td class="tLeft">賀賢</td>
+                                        <td>1</td>
+                                        <td>2:01:07</td>
+                                    </tr>
+                                    <tr>
+                                        <td>4</td>
+                                        <td>7</td>
+                                        <td class="tLeft">興惑(B351)</td>
+                                        <td class="tLeft">田泰安</td>
+                                        <td class="tLeft">告東尼</td>
+                                        <td>3</td>
+                                        <td>2:01:07</td>
+                                    </tr>
+                                    <tr>
+                                        <td>5</td>
+                                        <td>2</td>
+                                        <td class="tLeft">神龍駒(B108)</td>
+                                        <td class="tLeft">莫雷拉</td>
+                                        <td class="tLeft">告東尼</td>
+                                        <td>2</td>
+                                        <td>2:01:07</td>
+                                    </tr>
+                                    <tr>
+                                        <td>6</td>
+                                        <td>6</td>
+                                        <td class="tLeft">神采有你(C394)</td>
+                                        <td class="tLeft">史卓豐</td>
+                                        <td class="tLeft">姚本輝</td>
+                                        <td>4</td>
+                                        <td>2:01:07</td>
+                                    </tr>
+                                    <tr>
+                                        <td>7</td>
+                                        <td>8</td>
+                                        <td class="tLeft">高瞻遠矚(B345)</td>
+                                        <td class="tLeft">潘明輝</td>
+                                        <td class="tLeft">苗禮德</td>
+                                        <td>5</td>
+                                        <td>2:01:07</td>
+                                    </tr>
+                                    <tr>
+                                        <td>8</td>
+                                        <td>5</td>
+                                        <td class="tLeft">文武傳奇(B137)</td>
+                                        <td class="tLeft">波健士</td>
+                                        <td class="tLeft">沈集成</td>
+                                        <td>7</td>
+                                        <td>2:01:07</td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
                         <!--第二行-->
                         <tr>
                             <td class="tLeft">
@@ -585,6 +672,93 @@
                             <td>
                                 <a href="javascript:;" class="tbimg2 love"></a>
                                 <a href="javascript:;" class="tbimg3 innerBtn">+99></a>
+                            </td>
+                        </tr>
+                        <tr class="liveBoard">
+                            <td class="box" colspan="100">
+                                <table class="scoreBoard race">
+                                    <tr>
+                                        <th>名次</th>
+                                        <th>馬號</th>
+                                        <th class="tLeft">馬名</th>
+                                        <th class="tLeft">騎師</th>
+                                        <th class="tLeft">練馬師</th>
+                                        <th>檔位</th>
+                                        <th>成績</th>
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>4</td>
+                                        <td class="tLeft">水箭龜(C450)</td>
+                                        <td class="tLeft">周俊樂</td>
+                                        <td class="tLeft">霍利時</td>
+                                        <td>6</td>
+                                        <td>2:01:07</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2</td>
+                                        <td>3</td>
+                                        <td class="tLeft">全才(B213)</td>
+                                        <td class="tLeft">潘頓</td>
+                                        <td class="tLeft">雷達</td>
+                                        <td>8</td>
+                                        <td>2:01:07</td>
+                                    </tr>
+                                    <tr>
+                                        <td>3</td>
+                                        <td>1</td>
+                                        <td class="tLeft">福多寶(B026)</td>
+                                        <td class="tLeft">巴度</td>
+                                        <td class="tLeft">賀賢</td>
+                                        <td>1</td>
+                                        <td>2:01:07</td>
+                                    </tr>
+                                    <tr>
+                                        <td>4</td>
+                                        <td>7</td>
+                                        <td class="tLeft">興惑(B351)</td>
+                                        <td class="tLeft">田泰安</td>
+                                        <td class="tLeft">告東尼</td>
+                                        <td>3</td>
+                                        <td>2:01:07</td>
+                                    </tr>
+                                    <tr>
+                                        <td>5</td>
+                                        <td>2</td>
+                                        <td class="tLeft">神龍駒(B108)</td>
+                                        <td class="tLeft">莫雷拉</td>
+                                        <td class="tLeft">告東尼</td>
+                                        <td>2</td>
+                                        <td>2:01:07</td>
+                                    </tr>
+                                    <tr>
+                                        <td>6</td>
+                                        <td>6</td>
+                                        <td class="tLeft">神采有你(C394)</td>
+                                        <td class="tLeft">史卓豐</td>
+                                        <td class="tLeft">姚本輝</td>
+                                        <td>4</td>
+                                        <td>2:01:07</td>
+                                    </tr>
+                                    <tr>
+                                        <td>7</td>
+                                        <td>8</td>
+                                        <td class="tLeft">高瞻遠矚(B345)</td>
+                                        <td class="tLeft">潘明輝</td>
+                                        <td class="tLeft">苗禮德</td>
+                                        <td>5</td>
+                                        <td>2:01:07</td>
+                                    </tr>
+                                    <tr>
+                                        <td>8</td>
+                                        <td>5</td>
+                                        <td class="tLeft">文武傳奇(B137)</td>
+                                        <td class="tLeft">波健士</td>
+                                        <td class="tLeft">沈集成</td>
+                                        <td>7</td>
+                                        <td>2:01:07</td>
+                                    </tr>
+                                </table>
                             </td>
                         </tr>
                         <!--第二行-->
