--- a/html/balls/racecar.html
+++ b/html/balls/racecar.html
@@ -233,7 +233,7 @@
             <!--上列表-->
             <ul class="headerlist">
                 <li><a href="./basketball.html" class="active">市場列表</a></li>
-                <li><a href="#">直播</a></li>
+                <li><a href="./live.html">直播</a></li>
                 <li><a href="./result.html">比賽結果</a></li>
                 <li><a href="./teach.html">盤口教程</a></li>
                 <li><a href="../../index.html">比分</a></li>
@@ -496,6 +496,102 @@
                                 <a href="javascript:;" class="tbimg3 innerBtn">+99></a>
                             </td>
                         </tr>
+                        <tr class="liveBoard">
+                            <td class="box" colspan="100">
+                                <table class="scoreBoard raceCar">
+                                    <tr>
+                                        <th>名次</th>
+                                        <th>車號</th>
+                                        <th class="tLeft">車手</th>
+                                        <th>國家</th>
+                                        <th>發車</th>
+                                        <th class="tLeft">車隊</th>
+                                        <th>成績</th>
+                                        <th>積分</th>
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>44</td>
+                                        <td class="tLeft">咸美頓</td>
+                                        <td>英國</td>
+                                        <td>2</td>
+                                        <td class="tLeft">梅賽德斯AMG</td>
+                                        <td>1:28:32.430</td>
+                                        <td>26</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2</td>
+                                        <td>77</td>
+                                        <td class="tLeft">維特利.博塔斯</td>
+                                        <td>芬蘭</td>
+                                        <td>1</td>
+                                        <td class="tLeft">梅賽德斯AMG</td>
+                                        <td>1:28:32.430</td>
+                                        <td>18</td>
+                                    </tr>
+                                    <tr>
+                                        <td>3</td>
+                                        <td>3</td>
+                                        <td class="tLeft">丹尼爾.里卡多</td>
+                                        <td>澳洲</td>
+                                        <td>5</td>
+                                        <td class="tLeft">雷諾</td>
+                                        <td>1:28:32.430</td>
+                                        <td>15</td>
+                                    </tr>
+                                    <tr>
+                                        <td>4</td>
+                                        <td>26</td>
+                                        <td class="tLeft">達尼爾</td>
+                                        <td>俄羅斯</td>
+                                        <td>8</td>
+                                        <td class="tLeft">紅牛二隊</td>
+                                        <td>1:28:32.430</td>
+                                        <td>12</td>
+                                    </tr>
+                                    <tr>
+                                        <td>5</td>
+                                        <td>16</td>
+                                        <td class="tLeft">查爾斯.萊克勒克</td>
+                                        <td>摩納哥</td>
+                                        <td>8</td>
+                                        <td class="tLeft">法拉利</td>
+                                        <td>1:28:32.430</td>
+                                        <td>10</td>
+                                    </tr>
+                                    <tr>
+                                        <td>6</td>
+                                        <td>11</td>
+                                        <td class="tLeft">賽吉噢.佩雷茲</td>
+                                        <td>墨西哥</td>
+                                        <td>11</td>
+                                        <td class="tLeft">印度力量</td>
+                                        <td>1:28:32.430</td>
+                                        <td>8</td>
+                                    </tr>
+                                    <tr>
+                                        <td>7</td>
+                                        <td>55</td>
+                                        <td class="tLeft">賽恩斯</td>
+                                        <td>西班牙</td>
+                                        <td>11</td>
+                                        <td class="tLeft">邁凱輪</td>
+                                        <td>1:28:32.430</td>
+                                        <td>6</td>
+                                    </tr>
+                                    <tr>
+                                        <td>8</td>
+                                        <td>4</td>
+                                        <td class="tLeft">蘭多諾里斯</td>
+                                        <td>英國</td>
+                                        <td>9</td>
+                                        <td class="tLeft">阿爾法.羅密歐</td>
+                                        <td>1:28:32.430</td>
+                                        <td>4</td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
                         <!--第二行-->
                         <tr>
                             <td class="tLeft">
@@ -585,6 +681,102 @@
                             <td>
                                 <a href="javascript:;" class="tbimg2 love"></a>
                                 <a href="javascript:;" class="tbimg3 innerBtn">+99></a>
+                            </td>
+                        </tr>
+                        <tr class="liveBoard">
+                            <td class="box" colspan="100">
+                                <table class="scoreBoard raceCar">
+                                    <tr>
+                                        <th>名次</th>
+                                        <th>車號</th>
+                                        <th class="tLeft">車手</th>
+                                        <th>國家</th>
+                                        <th>發車</th>
+                                        <th class="tLeft">車隊</th>
+                                        <th>成績</th>
+                                        <th>積分</th>
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>44</td>
+                                        <td class="tLeft">咸美頓</td>
+                                        <td>英國</td>
+                                        <td>2</td>
+                                        <td class="tLeft">梅賽德斯AMG</td>
+                                        <td>1:28:32.430</td>
+                                        <td>26</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2</td>
+                                        <td>77</td>
+                                        <td class="tLeft">維特利.博塔斯</td>
+                                        <td>芬蘭</td>
+                                        <td>1</td>
+                                        <td class="tLeft">梅賽德斯AMG</td>
+                                        <td>1:28:32.430</td>
+                                        <td>18</td>
+                                    </tr>
+                                    <tr>
+                                        <td>3</td>
+                                        <td>3</td>
+                                        <td class="tLeft">丹尼爾.里卡多</td>
+                                        <td>澳洲</td>
+                                        <td>5</td>
+                                        <td class="tLeft">雷諾</td>
+                                        <td>1:28:32.430</td>
+                                        <td>15</td>
+                                    </tr>
+                                    <tr>
+                                        <td>4</td>
+                                        <td>26</td>
+                                        <td class="tLeft">達尼爾</td>
+                                        <td>俄羅斯</td>
+                                        <td>8</td>
+                                        <td class="tLeft">紅牛二隊</td>
+                                        <td>1:28:32.430</td>
+                                        <td>12</td>
+                                    </tr>
+                                    <tr>
+                                        <td>5</td>
+                                        <td>16</td>
+                                        <td class="tLeft">查爾斯.萊克勒克</td>
+                                        <td>摩納哥</td>
+                                        <td>8</td>
+                                        <td class="tLeft">法拉利</td>
+                                        <td>1:28:32.430</td>
+                                        <td>10</td>
+                                    </tr>
+                                    <tr>
+                                        <td>6</td>
+                                        <td>11</td>
+                                        <td class="tLeft">賽吉噢.佩雷茲</td>
+                                        <td>墨西哥</td>
+                                        <td>11</td>
+                                        <td class="tLeft">印度力量</td>
+                                        <td>1:28:32.430</td>
+                                        <td>8</td>
+                                    </tr>
+                                    <tr>
+                                        <td>7</td>
+                                        <td>55</td>
+                                        <td class="tLeft">賽恩斯</td>
+                                        <td>西班牙</td>
+                                        <td>11</td>
+                                        <td class="tLeft">邁凱輪</td>
+                                        <td>1:28:32.430</td>
+                                        <td>6</td>
+                                    </tr>
+                                    <tr>
+                                        <td>8</td>
+                                        <td>4</td>
+                                        <td class="tLeft">蘭多諾里斯</td>
+                                        <td>英國</td>
+                                        <td>9</td>
+                                        <td class="tLeft">阿爾法.羅密歐</td>
+                                        <td>1:28:32.430</td>
+                                        <td>4</td>
+                                    </tr>
+                                </table>
                             </td>
                         </tr>
                         <!--第二行-->
