--- a/html/balls/vball.html
+++ b/html/balls/vball.html
@@ -233,7 +233,7 @@
             <!--上列表-->
             <ul class="headerlist">
                 <li><a href="./basketball.html" class="active">市場列表</a></li>
-                <li><a href="#">直播</a></li>
+                <li><a href="./live.html">直播</a></li>
                 <li><a href="./result.html">比賽結果</a></li>
                 <li><a href="./teach.html">盤口教程</a></li>
                 <li><a href="../../index.html">比分</a></li>
@@ -534,6 +534,61 @@
                                 <a href="javascript:;" class="tbimg3 innerBtn">+99></a>
                             </td>
                         </tr>
+                        <tr class="liveBoard">
+                            <td class="box" colspan="100">
+                                <table class="scoreBoard vball">
+                                    <tr>
+                                        <th>球權</th>
+                                        <th class="tLeft">主客隊</th>
+                                        <th>1</th>
+                                        <th>2</th>
+                                        <th>3</th>
+                                        <th>4</th>
+                                        <th>5</th>
+                                        <th>6</th>
+                                        <th>7</th>
+                                        <th>總分</th>
+                                        <th>局數</th>
+                                    </tr>
+                                    <tr>
+                                        <td><span class="mark"></span></td>
+                                        <td class="tLeft">
+                                            <p>
+                                                <span class="mainTeam">主</span>
+                                                俄亥俄州立七葉樹(女)
+                                            </p>
+                                        </td>
+                                        <td>25</td>
+                                        <td>10</td>
+                                        <td>25</td>
+                                        <td>10</td>
+                                        <td>25</td>
+                                        <td>10</td>
+                                        <td>25</td>
+                                        <td>130</td>
+                                        <td>4</td>
+                                    </tr>
+                                    <tr>
+                                        <td>-</td>
+                                        <td class="tLeft">
+                                            <p>
+                                                <span class="customTeam">客</span>
+                                                普度鍋爐工(女)
+                                            </p>
+                                        </td>
+                                        <td>10</td>
+                                        <td>25</td>
+                                        <td>10</td>
+                                        <td>25</td>
+                                        <td>10</td>
+                                        <td>25</td>
+                                        <td>10</td>
+                                        <td>127</td>
+                                        <td>3</td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
                         <!--第二行-->
                         <tr>
                             <td class="tLeft">
@@ -757,6 +812,61 @@
                             <td>
                                 <a href="javascript:;" class="tbimg2 love"></a>
                                 <a href="javascript:;" class="tbimg3 innerBtn">+99></a>
+                            </td>
+                        </tr>
+                        <tr class="liveBoard">
+                            <td class="box" colspan="100">
+                                <table class="scoreBoard vball">
+                                    <tr>
+                                        <th>球權</th>
+                                        <th class="tLeft">主客隊</th>
+                                        <th>1</th>
+                                        <th>2</th>
+                                        <th>3</th>
+                                        <th>4</th>
+                                        <th>5</th>
+                                        <th>6</th>
+                                        <th>7</th>
+                                        <th>總分</th>
+                                        <th>局數</th>
+                                    </tr>
+                                    <tr>
+                                        <td><span class="mark"></span></td>
+                                        <td class="tLeft">
+                                            <p>
+                                                <span class="mainTeam">主</span>
+                                                俄亥俄州立七葉樹(女)
+                                            </p>
+                                        </td>
+                                        <td>25</td>
+                                        <td>10</td>
+                                        <td>25</td>
+                                        <td>10</td>
+                                        <td>25</td>
+                                        <td>10</td>
+                                        <td>25</td>
+                                        <td>130</td>
+                                        <td>4</td>
+                                    </tr>
+                                    <tr>
+                                        <td>-</td>
+                                        <td class="tLeft">
+                                            <p>
+                                                <span class="customTeam">客</span>
+                                                普度鍋爐工(女)
+                                            </p>
+                                        </td>
+                                        <td>10</td>
+                                        <td>25</td>
+                                        <td>10</td>
+                                        <td>25</td>
+                                        <td>10</td>
+                                        <td>25</td>
+                                        <td>10</td>
+                                        <td>127</td>
+                                        <td>3</td>
+                                    </tr>
+                                </table>
                             </td>
                         </tr>
                         <!--第二行-->
