--- a/html/balls/iceball.html
+++ b/html/balls/iceball.html
@@ -233,7 +233,7 @@
             <!--上列表-->
             <ul class="headerlist">
                 <li><a href="./basketball.html" class="active">市場列表</a></li>
-                <li><a href="#">直播</a></li>
+                <li><a href="./live.html">直播</a></li>
                 <li><a href="./result.html">比賽結果</a></li>
                 <li><a href="./teach.html">盤口教程</a></li>
                 <li><a href="../../index.html">比分</a></li>
@@ -519,6 +519,49 @@
                                 <a href="javascript:;" class="tbimg3 innerBtn">+99></a>
                             </td>
                         </tr>
+                        <tr class="liveBoard">
+                            <td class="box" colspan="100">
+                                <table class="scoreBoard basketball">
+                                    <tr>
+                                        <th class="tLeft">主客隊</th>
+                                        <th>1</th>
+                                        <th>2</th>
+                                        <th>3</th>
+                                        <th>OS</th>
+                                        <th>SO</th>
+                                        <th>總分</th>
+                                    </tr>
+                                    <tr>
+                                        <td class="tLeft">
+                                            <p>
+                                                <span class="mainTeam">主</span>
+                                                普羅為登斯褐熊
+                                            </p>
+                                        </td>
+                                        <td>0</td>
+                                        <td>1</td>
+                                        <td>0</td>
+                                        <td>-</td>
+                                        <td>-</td>
+                                        <td>1</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tLeft">
+                                            <p>
+                                                <span class="customTeam">客</span>
+                                                哈特福德狼群
+                                            </p>
+                                        </td>
+                                        <td>3</td>
+                                        <td>1</td>
+                                        <td>1</td>
+                                        <td>-</td>
+                                        <td>-</td>
+                                        <td>5</td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
                         <!--第二行-->
                         <tr>
                             <td class="tLeft">
@@ -748,6 +791,49 @@
                             <td>
                                 <a href="javascript:;" class="tbimg2 love"></a>
                                 <a href="javascript:;" class="tbimg3 innerBtn">+99></a>
+                            </td>
+                        </tr>
+                        <tr class="liveBoard">
+                            <td class="box" colspan="100">
+                                <table class="scoreBoard basketball">
+                                    <tr>
+                                        <th class="tLeft">主客隊</th>
+                                        <th>1</th>
+                                        <th>2</th>
+                                        <th>3</th>
+                                        <th>OS</th>
+                                        <th>SO</th>
+                                        <th>總分</th>
+                                    </tr>
+                                    <tr>
+                                        <td class="tLeft">
+                                            <p>
+                                                <span class="mainTeam">主</span>
+                                                普羅為登斯褐熊
+                                            </p>
+                                        </td>
+                                        <td>0</td>
+                                        <td>1</td>
+                                        <td>0</td>
+                                        <td>-</td>
+                                        <td>-</td>
+                                        <td>1</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tLeft">
+                                            <p>
+                                                <span class="customTeam">客</span>
+                                                哈特福德狼群
+                                            </p>
+                                        </td>
+                                        <td>3</td>
+                                        <td>1</td>
+                                        <td>1</td>
+                                        <td>-</td>
+                                        <td>-</td>
+                                        <td>5</td>
+                                    </tr>
+                                </table>
                             </td>
                         </tr>
                         <!--第二行-->
