--- a/html/balls/snooker.html
+++ b/html/balls/snooker.html
@@ -233,7 +233,7 @@
             <!--上列表-->
             <ul class="headerlist">
                 <li><a href="./basketball.html" class="active">市場列表</a></li>
-                <li><a href="#">直播</a></li>
+                <li><a href="./live.html">直播</a></li>
                 <li><a href="./result.html">比賽結果</a></li>
                 <li><a href="./teach.html">盤口教程</a></li>
                 <li><a href="../../index.html">比分</a></li>
@@ -498,6 +498,25 @@
                                 <a href="javascript:;" class="tbimg3 innerBtn">+99></a>
                             </td>
                         </tr>
+                        <tr class="liveBoard">
+                            <td class="box" colspan="100">
+                                <table class="scoreBoard snooker">
+                                    <tr>
+                                        <th>賽制</th>
+                                        <th class="tLeft">選手</th>
+                                        <th>局數</th>
+                                    </tr>
+                                    <tr>
+                                        <td>19F</td>
+                                        <td class="tLeft">
+                                            <p>尼爾.羅伯森[澳洲]</p>
+                                            <p>馬克.塞爾比[英格蘭]</p>
+                                        </td>
+                                        <td>4</td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
                         <!--第二行-->
                         <tr>
                             <td class="tLeft">
@@ -619,6 +638,25 @@
                             <td>
                                 <a href="javascript:;" class="tbimg2 love"></a>
                                 <a href="javascript:;" class="tbimg3 innerBtn">+99></a>
+                            </td>
+                        </tr>
+                        <tr class="liveBoard">
+                            <td class="box" colspan="100">
+                                <table class="scoreBoard snooker">
+                                    <tr>
+                                        <th>賽制</th>
+                                        <th class="tLeft">選手</th>
+                                        <th>局數</th>
+                                    </tr>
+                                    <tr>
+                                        <td>19F</td>
+                                        <td class="tLeft">
+                                            <p>尼爾.羅伯森[澳洲]</p>
+                                            <p>馬克.塞爾比[英格蘭]</p>
+                                        </td>
+                                        <td>4</td>
+                                    </tr>
+                                </table>
                             </td>
                         </tr>
                         <!--第二行-->
