--- a/html/balls/soccer.html
+++ b/html/balls/soccer.html
@@ -233,7 +233,7 @@
             <!--上列表-->
             <ul class="headerlist">
                 <li><a href="./soccer.html" class="active">市場列表</a></li>
-                <li><a href="#">直播</a></li>
+                <li><a href="./live.html">直播</a></li>
                 <li><a href="./result.html">比賽結果</a></li>
                 <li><a href="./teach.html">盤口教程</a></li>
                 <li><a href="../../index.html">比分</a></li>
@@ -510,6 +510,79 @@
                             <td>
                                 <a href="javascript:;" class="tbimg2 love"></a>
                                 <a href="javascript:;" class="tbimg3 innerBtn">+99></a>
+                            </td>
+                        </tr>
+                        <tr class="liveBoard">
+                            <td class="box" colspan="100">
+                                <table class="scoreBoard soccer">
+                                    <tr>
+                                        <th class="tLeft">主客隊</th>
+                                        <th>犯規數</th>
+                                        <th>全場</th>
+                                        <th>犯規數</th>
+                                        <th>半場</th>
+                                    </tr>
+                                    <tr>
+                                        <td class="tLeft">
+                                            <p>
+                                                <span class="mainTeam">主</span>
+                                                烏法足球俱樂部青年
+                                            </p>
+                                        </td>
+                                        <td>
+                                            <p class="redCard">
+                                                <span></span>
+                                                0
+                                            </p>
+                                            <p class="yellowCard">
+                                                <span></span>
+                                                0
+                                            </p>
+                                        </td>
+                                        <td>0</td>
+                                        <td>
+                                            <p class="redCard">
+                                                <span></span>
+                                                0
+                                            </p>
+                                            <p class="yellowCard">
+                                                <span></span>
+                                                0
+                                            </p>
+                                        </td>
+                                        <td>0</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tLeft">
+                                            <p>
+                                                <span class="customTeam">客</span>
+                                                斯特羅吉諾足球俱樂部青年
+                                            </p>
+                                        </td>
+                                        <td>
+                                            <p class="redCard">
+                                                <span></span>
+                                                0
+                                            </p>
+                                            <p class="yellowCard">
+                                                <span></span>
+                                                0
+                                            </p>
+                                        </td>
+                                        <td>0</td>
+                                        <td>
+                                            <p class="redCard">
+                                                <span></span>
+                                                0
+                                            </p>
+                                            <p class="yellowCard">
+                                                <span></span>
+                                                0
+                                            </p>
+                                        </td>
+                                        <td>0</td>
+                                    </tr>
+                                </table>
                             </td>
                         </tr>
                         <!--第二行-->
