--- a/html/balls/stock.html
+++ b/html/balls/stock.html
@@ -233,7 +233,7 @@
             <!--上列表-->
             <ul class="headerlist">
                 <li><a href="./basketball.html" class="active">市場列表</a></li>
-                <li><a href="#">直播</a></li>
+                <li><a href="./live.html">直播</a></li>
                 <li><a href="./result.html">比賽結果</a></li>
                 <li><a href="./teach.html">盤口教程</a></li>
                 <li><a href="../../index.html">比分</a></li>
@@ -496,6 +496,24 @@
                                 <a href="javascript:;" class="tbimg3 innerBtn">+99></a>
                             </td>
                         </tr>
+                        <tr class="liveBoard">
+                            <td class="box" colspan="100">
+                                <table class="scoreBoard stock">
+                                    <tr>
+                                        <th>開盤價</th>
+                                        <th>收盤價</th>
+                                        <th>開盤</th>
+                                        <th>收盤</th>
+                                    </tr>
+                                    <tr>
+                                        <td>26.691.28</td>
+                                        <td>26.925.05</td>
+                                        <td>1</td>
+                                        <td>5</td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
                          <!--第二行-->
                          <tr>
                             <td class="tLeft">
@@ -585,6 +603,24 @@
                             <td>
                                 <a href="javascript:;" class="tbimg2 love"></a>
                                 <a href="javascript:;" class="tbimg3 innerBtn">+99></a>
+                            </td>
+                        </tr>
+                        <tr class="liveBoard">
+                            <td class="box" colspan="100">
+                                <table class="scoreBoard stock">
+                                    <tr>
+                                        <th>開盤價</th>
+                                        <th>收盤價</th>
+                                        <th>開盤</th>
+                                        <th>收盤</th>
+                                    </tr>
+                                    <tr>
+                                        <td>26.691.28</td>
+                                        <td>26.925.05</td>
+                                        <td>1</td>
+                                        <td>5</td>
+                                    </tr>
+                                </table>
                             </td>
                         </tr>
                         <!--第二行-->
