--- a/html/balls/tableball.html
+++ b/html/balls/tableball.html
@@ -233,7 +233,7 @@
             <!--上列表-->
             <ul class="headerlist">
                 <li><a href="./basketball.html" class="active">市場列表</a></li>
-                <li><a href="#">直播</a></li>
+                <li><a href="./live.html">直播</a></li>
                 <li><a href="./result.html">比賽結果</a></li>
                 <li><a href="./teach.html">盤口教程</a></li>
                 <li><a href="../../index.html">比分</a></li>
@@ -534,6 +534,51 @@
                                 <a href="javascript:;" class="tbimg3 innerBtn">+99></a>
                             </td>
                         </tr>
+                        <tr class="liveBoard">
+                            <td class="box" colspan="100">
+                                <table class="scoreBoard vball">
+                                    <tr>
+                                        <th>球權</th>
+                                        <th class="tLeft">選手</th>
+                                        <th>1</th>
+                                        <th>2</th>
+                                        <th>3</th>
+                                        <th>4</th>
+                                        <th>5</th>
+                                        <th>6</th>
+                                        <th>7</th>
+                                        <th>總分</th>
+                                        <th>局數</th>
+                                    </tr>
+                                    <tr>
+                                        <td><span class="mark"></span></td>
+                                        <td class="tLeft">俄Scherbak A. (Ukr)</td>
+                                        <td>11</td>
+                                        <td>1</td>
+                                        <td>11</td>
+                                        <td>1</td>
+                                        <td>11</td>
+                                        <td>1</td>
+                                        <td>11</td>
+                                        <td>47</td>
+                                        <td>4</td>
+                                    </tr>
+                                    <tr>
+                                        <td>-</td>
+                                        <td class="tLeft">Khahamidi P. (Ukr)</td>
+                                        <td>1</td>
+                                        <td>11</td>
+                                        <td>1</td>
+                                        <td>11</td>
+                                        <td>1</td>
+                                        <td>11</td>
+                                        <td>1</td>
+                                        <td>45</td>
+                                        <td>3</td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
                         <!--第二行-->
                         <tr>
                             <td class="tLeft">
@@ -757,6 +802,51 @@
                             <td>
                                 <a href="javascript:;" class="tbimg2 love"></a>
                                 <a href="javascript:;" class="tbimg3 innerBtn">+99></a>
+                            </td>
+                        </tr>
+                        <tr class="liveBoard">
+                            <td class="box" colspan="100">
+                                <table class="scoreBoard vball">
+                                    <tr>
+                                        <th>球權</th>
+                                        <th class="tLeft">選手</th>
+                                        <th>1</th>
+                                        <th>2</th>
+                                        <th>3</th>
+                                        <th>4</th>
+                                        <th>5</th>
+                                        <th>6</th>
+                                        <th>7</th>
+                                        <th>總分</th>
+                                        <th>局數</th>
+                                    </tr>
+                                    <tr>
+                                        <td><span class="mark"></span></td>
+                                        <td class="tLeft">俄Scherbak A. (Ukr)</td>
+                                        <td>11</td>
+                                        <td>1</td>
+                                        <td>11</td>
+                                        <td>1</td>
+                                        <td>11</td>
+                                        <td>1</td>
+                                        <td>11</td>
+                                        <td>47</td>
+                                        <td>4</td>
+                                    </tr>
+                                    <tr>
+                                        <td>-</td>
+                                        <td class="tLeft">Khahamidi P. (Ukr)</td>
+                                        <td>1</td>
+                                        <td>11</td>
+                                        <td>1</td>
+                                        <td>11</td>
+                                        <td>1</td>
+                                        <td>11</td>
+                                        <td>1</td>
+                                        <td>45</td>
+                                        <td>3</td>
+                                    </tr>
+                                </table>
                             </td>
                         </tr>
                         <!--第二行-->
