--- a/html/balls/teach.html
+++ b/html/balls/teach.html
@@ -233,7 +233,7 @@
             <!--上列表-->
             <ul class="headerlist">
                 <li><a href="./soccer.html">市場列表</a></li>
-                <li><a href="#">直播</a></li>
+                <li><a href="./live.html">直播</a></li>
                 <li><a href="./result.html">比賽結果</a></li>
                 <li><a href="./teach.html" class="active">盤口教程</a></li>
                 <li><a href="../../index.html">比分</a></li>
